# hardware_alife

./: .clang-format  .editorconfig  .gitignore  .pylintrc  CMakeLists.txt  README.md  build_both.sh  build_pure.bat  build_pure.sh  build_tests.bat  build_verilated.sh
docs/: creating-testbenches.md
hardware/spinalhdl/: README.md  build.sbt  generate.scala
hardware/spinalhdl/src/main/scala/gpu/: GpuTypes.scala
hardware/vhdl/gpu/: gpu_types.vhd  rect_renderer.vhd  rw_fb.vhd
hardware/vhdl/imports/: plotline.vhd
hardware/vhdl/tops/: rw_fb_test_top.vhd
resources/fonts/: FiraSans-Regular.arfont  OpenSans-ExtraBold.arfont  OpenSans-Regular.arfont  OpenSans-SemiBold.arfont
resources/shaders/: circle.frag  circle.vert  line.frag  line.vert  rect.frag  rect.vert  rect_simple.frag  rect_simple.vert  rect_tex.frag  rect_tex.vert  text.frag  text.vert  tri.frag  tri.vert
software/alife/: CMakeLists.txt
software/alife/src/: main.cpp
software/pure/: CMakeLists.txt
software/pure/src/: main.cpp
software/pure/src/audio/: audio_command.h  audio_manager.cpp  audio_manager.h  audio_source.h  cached_audio_source.cpp  cached_audio_source.h  event_audio_source.cpp  event_audio_source.h  lock_free_ring_buffer.h  sound_generators.cpp  sound_generators.h
software/pure/src/examples/: cnl_eigen_example.h
software/pure/src/graphics/: framebuffer.h  gpu.cpp  gpu.h
software/pure/src/screens/: gpu_test.cpp  gpu_test.h  screen.cpp  screen.h  screen_context.h  snn_test.cpp  snn_test.h  test_screen.cpp  test_screen.h
software/pure/src/systems/: creature.h  fp.h  game.cpp  game.h  plant.h  snn.h
software/pure/src/systems/fp/: fp.h  fp_core.h  fp_io.h  fp_literals.h  fp_math.h  fp_types.h
software/tests/: CMakeLists.txt
software/tests/fp/: CMakeLists.txt  test_fp_core.cpp  test_fp_io.cpp  test_fp_literals.cpp  test_fp_math.cpp  test_fp_types.cpp
software/tools/: generate_font_atlas.py
software/verilated/: CMakeLists.txt
software/verilated/src/: main.cpp
software/verilated/src/tests/: rw_fb_test.cpp
src/: cuda_test.cu  main.cpp  main.cu
src/graphics/: shader.cpp  shader.h
src/graphics/renderers/: base_renderer.h  circle.cpp  circle.cu  circle.cuh  circle.h  font.cpp  font.h  line.cpp  line.cu  line.cuh  rect.cpp  rect.cu  rect.cuh  rect.h  simple_rect.cpp  simple_rect.cu  simple_rect.cuh  simple_rect.h
src/graphics/viewports/: extend.cpp  extend.h
src/screens/: default.cpp  default.cu  default.cuh  default.h  demo.cpp  demo.cu  demo.cuh  demo.h  screen.h
src/systems/: game.cpp  game.cu  game.cuh  game.h  resources.cuh  resources.h
